--- a/front/1354/css/3087.css
+++ b/front/1354/css/3087.css
@@ -4,96 +4,75 @@ body {
   font-size: 16px;
   color: #333;
 }
-@media (max-width: 768px) {
-  .col-md-8 {
-    width: 66.6667%;
-  }
-  .col-md-4 {
-    width: 33.3333%;
-  }
-  .container {
-    margin: 20px auto;
-    padding: 30px 10px;
-    border-radius: 10px;
-    background-color: #fff;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
-  }
+.container {
+  margin: 20px auto;
+  padding: 30px 10px;
+  border-radius: 10px;
+  background-color: #fff;
+  box-shadow: 0 0 10px rgba(0,0,0,0.1);
 }
 .row {
   display: flex;
 }
-div input.form-control {
+input.form-control,
+textarea.form-control {
   background-color: #fefefd;
   border-radius: 4px;
   border: 2px solid #edebe3;
   box-shadow: inset 0 0px 0px rgba(0,0,0,0.075);
-  height: 49px;
   color: #7c8182;
 }
-div .btn-primary {
-  background-color: #dc3545;
-  border-color: #007bff;
+input.form-control {
+  height: 49px;
+}
+textarea.form-control {
+  height: 240px;
+}
+.btn-primary {
+  background-color: #dc3545 !important;
+  border-color: #dc3545 !important;
   border-radius: 5px;
+  color: white;
 }
-div .btn-primary:hover {
-  background-color: #0056b3;
-  border-color: #004085;
+.btn-primary:hover {
+  background-color: #bd2130 !important;
+  border-color: #dc3545 !important;
 }
-div .short-input {
-  max-width: 300px;
-}
-div .long-input {
-  width: 80%;
-  max-width: none;
-  box-sizing: border-box;
-}
-div h2 {
-  font-size: 22px;
-  line-height: 28px;
-  font-weight: 500;
-  margin-bottom: 10px;
-  font-family: 'Poppins', sans-serif;
-}
-div .btn {
-  padding: 15px 13px;
-  border-radius: 4px;
-  font-size: 14px;
-  line-height: 14px;
-  font-weight: 900;
-  letter-spacing: 1px;
-  text-transform: uppercase;
-  font-family: 'Poppins', sans-serif;
-  border: transparent;
-}
-div h1 {
+h1 {
   font-size: 32px;
   line-height: 46px;
   font-weight: 500;
   color: #222;
 }
-div .well-bg {
+h2 {
+  font-size: 16px !important;
+  line-height: 24px;
+  font-weight: 500;
+  margin-bottom: 10px;
+}
+.well-bg {
   background-color: #f9f8f4;
   padding: 20px;
   margin-bottom: 20px;
 }
-div .well-inner {
+.well-inner {
   background-color: #fff;
   padding: 30px;
   box-shadow: 0px 0px 3px 0px #e7e5de;
 }
-div .widget-address i,
-div .widget-schedule i,
-div .widget-phone i {
+.widget-address i,
+.widget-schedule i,
+.widget-phone i {
   font-size: 18px;
   color: #c45d3c;
   float: left;
   margin-right: 15px;
   margin-top: 4px;
 }
-div .widget-title {
+.widget-title {
   font-size: 18px;
 }
-div .fa {
+.fa {
   display: inline-block;
   font: normal normal normal 14px/1 FontAwesome;
   font-size: inherit;
@@ -101,11 +80,11 @@ div .fa {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-div textarea.form-control {
-  height: 240px;
-  background-color: #fefefd;
-  border-radius: 4px;
-  border: 2px solid #edebe3;
-  -webkit-box-shadow: inset 0 0px 0px rgba(0,0,0,0.075);
-  box-shadow: inset 0 0px 0px rgba(0,0,0,0.075);
+@media (max-width: 768px) {
+  .col-md-8 {
+    width: 66.6667%;
+  }
+  .col-md-4 {
+    width: 33.3333%;
+  }
 }
