--- a/front/1354/less/3087.less
+++ b/front/1354/less/3087.less
@@ -3,22 +3,116 @@
 @input-bg-color: #fefefd;
 @input-border-color: #edebe3;
 @btn-primary-bg-color: #dc3545;
-@btn-primary-border-color: #007bff;
-@btn-primary-hover-bg-color: #0056b3;
-@btn-primary-hover-border-color: #004085;
+@btn-primary-border-color: #dc3545;
+/* Đặt màu biên giống màu nền nếu cần */
+@btn-primary-hover-bg-color: darken(@btn-primary-bg-color, 10%);
+/* Màu nền đỏ đậm hơn khi hover */
+@btn-primary-hover-border-color: #dc3545;
 @well-bg-color: #f9f8f4;
 @well-inner-bg-color: #fff;
 @well-box-shadow-color: rgba(231, 229, 222, 1);
 @icon-color: #c45d3c;
-
-
-
 
 body {
     background-color: @background-color;
     font-family: 'Poppins', sans-serif;
     font-size: 16px;
     color: #333;
+}
+
+.container {
+    margin: 20px auto;
+    padding: 30px 10px;
+    border-radius: 10px;
+    background-color: #fff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.row {
+    display: flex;
+}
+
+input.form-control,
+textarea.form-control {
+    background-color: @input-bg-color;
+    border-radius: 4px;
+    border: 2px solid @input-border-color;
+    box-shadow: inset 0 0px 0px rgba(0, 0, 0, .075);
+    color: @text-color;
+}
+
+input.form-control {
+    height: 49px;
+}
+
+textarea.form-control {
+    height: 240px;
+}
+
+.btn-primary {
+    background-color: @btn-primary-bg-color !important;;
+    /* Sử dụng màu nền từ biến */
+    border-color: @btn-primary-border-color!important;;
+    border-radius: 5px;
+    color: white;
+    /* Màu chữ trắng */
+
+    &:hover {
+        background-color: @btn-primary-hover-bg-color!important;;
+        /* Sử dụng màu hover từ biến */
+        border-color: @btn-primary-hover-border-color!important;;
+    }
+}
+
+h1 {
+    font-size: 32px;
+    line-height: 46px;
+    font-weight: 500;
+    color: #222;
+}
+
+h2 {
+    font-size: 16px !important;
+    /* Kích thước phông chữ nhỏ hơn */
+    line-height: 24px;
+    /* Điều chỉnh chiều cao dòng nếu cần */
+    font-weight: 500;
+    margin-bottom: 10px;
+}
+
+.well-bg {
+    background-color: @well-bg-color;
+    padding: 20px;
+    margin-bottom: 20px;
+}
+
+.well-inner {
+    background-color: @well-inner-bg-color;
+    padding: 30px;
+    box-shadow: 0px 0px 3px 0px @well-box-shadow-color;
+}
+
+.widget-address i,
+.widget-schedule i,
+.widget-phone i {
+    font-size: 18px;
+    color: @icon-color;
+    float: left;
+    margin-right: 15px;
+    margin-top: 4px;
+}
+
+.widget-title {
+    font-size: 18px;
+}
+
+.fa {
+    display: inline-block;
+    font: normal normal normal 14px / 1 FontAwesome;
+    font-size: inherit;
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 @media (max-width: 768px) {
@@ -28,123 +122,5 @@ body {
 
     .col-md-4 {
         width: 33.3333%;
-    }
-
-    .container {
-        margin: 20px auto;
-        padding: 30px 10px;
-        border-radius: 10px;
-        background-color: #fff;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    }
-}
-
-
-.row {
-    display: flex;
-}
-
-
-
-div {
-    input.form-control {
-        background-color: @input-bg-color;
-        border-radius: 4px;
-        border: 2px solid @input-border-color;
-        box-shadow: inset 0 0px 0px rgba(0, 0, 0, .075);
-        height: 49px;
-        color: @text-color;
-    }
-
-    .btn-primary {
-        background-color: @btn-primary-bg-color;
-        border-color: @btn-primary-border-color;
-        border-radius: 5px;
-
-        &:hover {
-            background-color: @btn-primary-hover-bg-color;
-            border-color: @btn-primary-hover-border-color;
-        }
-    }
-
-    .short-input {
-        max-width: 300px;
-    }
-
-    .long-input {
-        width: 80%;
-        max-width: none;
-        box-sizing: border-box;
-    }
-
-    h2 {
-        font-size: 22px;
-        line-height: 28px;
-        font-weight: 500;
-        margin-bottom: 10px;
-        font-family: 'Poppins', sans-serif;
-    }
-
-    .btn {
-        padding: 15px 13px;
-        border-radius: 4px;
-        font-size: 14px;
-        line-height: 14px;
-        font-weight: 900;
-        letter-spacing: 1px;
-        text-transform: uppercase;
-        font-family: 'Poppins', sans-serif;
-        border: transparent;
-    }
-
-    h1 {
-        font-size: 32px;
-        line-height: 46px;
-        font-weight: 500;
-        color: #222;
-    }
-
-    .well-bg {
-        background-color: @well-bg-color;
-        padding: 20px;
-        margin-bottom: 20px;
-    }
-
-    .well-inner {
-        background-color: @well-inner-bg-color;
-        padding: 30px;
-        box-shadow: 0px 0px 3px 0px @well-box-shadow-color;
-    }
-
-    .widget-address i,
-    .widget-schedule i,
-    .widget-phone i {
-        font-size: 18px;
-        color: @icon-color;
-        float: left;
-        margin-right: 15px;
-        margin-top: 4px;
-    }
-
-    .widget-title {
-        font-size: 18px;
-    }
-
-    .fa {
-        display: inline-block;
-        font: normal normal normal 14px / 1 FontAwesome;
-        font-size: inherit;
-        text-rendering: auto;
-        -webkit-font-smoothing: antialiased;
-        -moz-osx-font-smoothing: grayscale;
-    }
-
-    textarea.form-control {
-        height: 240px;
-        background-color: #fefefd;
-        border-radius: 4px;
-        border: 2px solid #edebe3;
-        -webkit-box-shadow: inset 0 0px 0px rgba(0, 0, 0, .075);
-        box-shadow: inset 0 0px 0px rgba(0, 0, 0, .075);
     }
 }
