--- a/front/1354/css/3087.css
+++ b/front/1354/css/3087.css
@@ -1,9 +1,3 @@
-body {
-  background-color: #f8f9fa;
-  font-family: 'Poppins', sans-serif;
-  font-size: 16px;
-  color: #333;
-}
 .container {
   margin: 20px auto;
   padding: 30px 10px;
@@ -25,8 +19,12 @@ textarea.form-control {
 input.form-control {
   height: 49px;
 }
-textarea.form-control {
-  height: 240px;
+.message-input {
+  height: 200px !important;
+  background-color: #fefefd;
+  border-radius: 4px;
+  border: 2px solid #edebe3;
+  box-shadow: inset 0 0px 0px rgba(0,0,0,0.075);
 }
 .btn-primary {
   background-color: #dc3545 !important;
@@ -79,12 +77,4 @@ h2 {
   text-rendering: auto;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-@media (max-width: 768px) {
-  .col-md-8 {
-    width: 66.6667%;
-  }
-  .col-md-4 {
-    width: 33.3333%;
-  }
 }
