--- a/front/1354/less/3087.less
+++ b/front/1354/less/3087.less
@@ -13,12 +13,6 @@
 @well-box-shadow-color: rgba(231, 229, 222, 1);
 @icon-color: #c45d3c;
 
-body {
-    background-color: @background-color;
-    font-family: 'Poppins', sans-serif;
-    font-size: 16px;
-    color: #333;
-}
 
 .container {
     margin: 20px auto;
@@ -44,9 +38,12 @@ textarea.form-control {
 input.form-control {
     height: 49px;
 }
-
-textarea.form-control {
-    height: 240px;
+.message-input {
+    height: 200px !important; /* Đặt chiều cao cho ô Message là 200px */
+    background-color: @input-bg-color; /* Sử dụng màu nền bạn đã định nghĩa */
+    border-radius: 4px;
+    border: 2px solid @input-border-color;
+    box-shadow: inset 0 0px 0px rgba(0, 0, 0, .075);
 }
 
 .btn-primary {
@@ -113,14 +110,4 @@ h2 {
     text-rendering: auto;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-}
-
-@media (max-width: 768px) {
-    .col-md-8 {
-        width: 66.6667%;
-    }
-
-    .col-md-4 {
-        width: 33.3333%;
-    }
 }
