--- a/front/1354/less/3202.less
+++ b/front/1354/less/3202.less
@@ -7,19 +7,12 @@
 
         .vc_toggle_title {
             display: flex;
-            /* Sử dụng flex để dễ dàng căn chỉnh */
-            justify-content: space-between;
-            /* Căn giữa giữa tiêu đề và biểu tượng */
+            justify-content: space-between; // Căn giữa giữa tiêu đề và biểu tượng
             cursor: pointer;
-            /* Thay đổi con trỏ khi di chuột */
             background-color: white;
-            /* Màu nền cho tiêu đề */
             padding: 10px;
-            /* Khoảng cách bên trong */
             border-radius: 5px;
-            /* Bo góc */
-            box-shadow: 0 2px 3px rgba(0, 0, 0, 0.2);
-            /* Bóng chỉ ở phía dưới */
+            box-shadow: 0 2px 3px rgba(0, 0, 0, 0.2); // Bóng đổ phía dưới
 
             h4 {
                 margin: 0;
@@ -41,11 +34,8 @@
 
         .vc_toggle_content {
             border: none;
-            /* Loại bỏ viền */
             padding: 10px;
-            /* Thêm padding nếu cần thiết */
             background-color: transparent;
-            /* Đặt màu nền nếu cần */
         }
     }
 }
