--- a/front/1354/css/3087.css
+++ b/front/1354/css/3087.css
@@ -1,30 +1,9 @@
-.container {
-  margin: 20px auto;
-  padding: 30px 10px;
-  border-radius: 10px;
-  background-color: #fff;
-  box-shadow: 0 0 10px rgba(0,0,0,0.1);
-}
-.row {
-  display: flex;
-}
 input.form-control,
 textarea.form-control {
   background-color: #fefefd;
   border-radius: 4px;
   border: 2px solid #edebe3;
-  box-shadow: inset 0 0px 0px rgba(0,0,0,0.075);
   color: #7c8182;
-}
-input.form-control {
-  height: 49px;
-}
-.message-input {
-  height: 200px !important;
-  background-color: #fefefd;
-  border-radius: 4px;
-  border: 2px solid #edebe3;
-  box-shadow: inset 0 0px 0px rgba(0,0,0,0.075);
 }
 .btn-primary {
   background-color: #dc3545 !important;
@@ -36,16 +15,18 @@ input.form-control {
   background-color: #bd2130 !important;
   border-color: #dc3545 !important;
 }
+h1,
+h2 {
+  font-weight: 500;
+}
 h1 {
   font-size: 32px;
   line-height: 46px;
-  font-weight: 500;
   color: #222;
 }
 h2 {
   font-size: 16px !important;
   line-height: 24px;
-  font-weight: 500;
   margin-bottom: 10px;
 }
 .well-bg {
@@ -56,7 +37,7 @@ h2 {
 .well-inner {
   background-color: #fff;
   padding: 30px;
-  box-shadow: 0px 0px 3px 0px #e7e5de;
+  box-shadow: 0 0 3px 0 #e7e5de;
 }
 .widget-address i,
 .widget-schedule i,
@@ -69,12 +50,4 @@ h2 {
 }
 .widget-title {
   font-size: 18px;
-}
-.fa {
-  display: inline-block;
-  font: normal normal normal 14px/1 FontAwesome;
-  font-size: inherit;
-  text-rendering: auto;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
