--- a/front/1354/less/3087.less
+++ b/front/1354/less/3087.less
@@ -3,80 +3,53 @@
 @input-bg-color: #fefefd;
 @input-border-color: #edebe3;
 @btn-primary-bg-color: #dc3545;
-@btn-primary-border-color: #dc3545;
-/* Đặt màu biên giống màu nền nếu cần */
+@btn-primary-border-color: @btn-primary-bg-color;
 @btn-primary-hover-bg-color: darken(@btn-primary-bg-color, 10%);
-/* Màu nền đỏ đậm hơn khi hover */
-@btn-primary-hover-border-color: #dc3545;
 @well-bg-color: #f9f8f4;
 @well-inner-bg-color: #fff;
 @well-box-shadow-color: rgba(231, 229, 222, 1);
 @icon-color: #c45d3c;
 
-
-.container {
-    margin: 20px auto;
-    padding: 30px 10px;
-    border-radius: 10px;
-    background-color: #fff;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-
-.row {
-    display: flex;
-}
-
+/* Định dạng cho input và textarea */
 input.form-control,
 textarea.form-control {
     background-color: @input-bg-color;
     border-radius: 4px;
     border: 2px solid @input-border-color;
-    box-shadow: inset 0 0px 0px rgba(0, 0, 0, .075);
     color: @text-color;
 }
 
-input.form-control {
-    height: 49px;
-}
-.message-input {
-    height: 200px !important; /* Đặt chiều cao cho ô Message là 200px */
-    background-color: @input-bg-color; /* Sử dụng màu nền bạn đã định nghĩa */
-    border-radius: 4px;
-    border: 2px solid @input-border-color;
-    box-shadow: inset 0 0px 0px rgba(0, 0, 0, .075);
-}
-
+/* Cấu hình cho button */
 .btn-primary {
-    background-color: @btn-primary-bg-color !important;;
-    /* Sử dụng màu nền từ biến */
-    border-color: @btn-primary-border-color!important;;
+    background-color: @btn-primary-bg-color !important;
+    border-color: @btn-primary-border-color !important;
     border-radius: 5px;
     color: white;
-    /* Màu chữ trắng */
 
     &:hover {
-        background-color: @btn-primary-hover-bg-color!important;;
-        /* Sử dụng màu hover từ biến */
-        border-color: @btn-primary-hover-border-color!important;;
+        background-color: @btn-primary-hover-bg-color !important;
+        border-color: @btn-primary-border-color !important;
     }
+}
+
+/* Định dạng tiêu đề */
+h1, h2 {
+    font-weight: 500;
 }
 
 h1 {
     font-size: 32px;
     line-height: 46px;
-    font-weight: 500;
     color: #222;
 }
 
 h2 {
     font-size: 16px !important;
-    /* Kích thước phông chữ nhỏ hơn */
     line-height: 24px;
-    /* Điều chỉnh chiều cao dòng nếu cần */
-    font-weight: 500;
     margin-bottom: 10px;
 }
 
+/* Định dạng cho các khối nội dung */
 .well-bg {
     background-color: @well-bg-color;
     padding: 20px;
@@ -86,9 +59,10 @@ h2 {
 .well-inner {
     background-color: @well-inner-bg-color;
     padding: 30px;
-    box-shadow: 0px 0px 3px 0px @well-box-shadow-color;
+    box-shadow: 0 0 3px 0 @well-box-shadow-color;
 }
 
+/* Định dạng cho các icon */
 .widget-address i,
 .widget-schedule i,
 .widget-phone i {
@@ -99,15 +73,7 @@ h2 {
     margin-top: 4px;
 }
 
+/* Định dạng cho tiêu đề widget */
 .widget-title {
     font-size: 18px;
-}
-
-.fa {
-    display: inline-block;
-    font: normal normal normal 14px / 1 FontAwesome;
-    font-size: inherit;
-    text-rendering: auto;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
 }
